--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,5 @@
+/* ESTILOS SUPER GENERICOS E IMPOTAÇÕES */
+
 @import url('https://fonts.googleapis.com/css2?family=Recursive:wght@400;700&family=Righteous&family=Roboto:wght@400;500;700&display=swap');
 /* 
 font-family: 'Recursive', sans-serif;
@@ -22,6 +24,13 @@ body {
 
 }
 
+
+
+/*******************
+********************
+********************
+********************
+*******************/
 /* COMEÇA TELA DE BOAS VINDAS */
 .boas-vindas {
     display: flex;
@@ -67,6 +76,12 @@ body {
 
 
 
+
+/*******************
+********************
+********************
+********************
+*******************/
 /* COMEÇA TELA DE META */
 .meta {
     display: flex;
@@ -141,6 +156,13 @@ body {
 /* TERMINA TELA DE META */
 
 
+
+
+/*******************
+********************
+********************
+********************
+*******************/
 /* COMEÇA TELA DE DECKS */
 .decks {
     display: flex;
@@ -192,10 +214,6 @@ body {
     padding-left: 5px;
 }
 
-.decks input::placeholder {
-    color: #ADADAD;
-}
-
 .decks p {
     margin: 10px 0;
     font-family: 'Roboto', sans-serif;
@@ -213,3 +231,76 @@ body {
     border-radius: 5px;
 }
 /* TERMINA TELA DE DECKS */
+
+
+
+/*******************
+********************
+********************
+********************
+*******************/
+/* COMEÇA TELA DE GAME */
+.game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    padding-bottom: 100px;
+}
+
+.game header {
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+    background-color: #FB6B6B;
+    z-index: 1;
+}
+
+.game header img {
+    width: 52px;
+    height: auto;
+}
+
+.game header h1 {
+    margin-left: 20px;
+    font-family: 'Righteous', cursive;
+    font-size: 36px;
+    color: white;
+    line-height: 44.7px;
+    text-align: center;
+}
+
+.game p {
+    margin: 10px 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    color: black;
+    text-shadow: 0 0 5px 5px red;
+}
+
+.game main {
+    display: flex;
+    flex-direction: column;
+    margin-top: 142px;
+}
+
+.game footer {
+    width: 100%;
+    min-height: 70px;
+    background-color: white;
+    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.05);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+}
+/* TERMINA TELA DE GAME */
