--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -210,10 +210,15 @@ body {
     margin-top: 36px;
     border-radius: 5px;
     border: none;
+    background-color: lightgrey;
     color: black;
     padding-left: 5px;
 }
 
+.decks select option:not(:checked) {
+    background-color: white;
+}
+ 
 .decks p {
     margin: 10px 0;
     font-family: 'Roboto', sans-serif;
@@ -292,7 +297,16 @@ body {
     flex-direction: column;
     margin-top: 142px;
 }
+/* TERMINA TELA DE GAME */
 
+
+
+/*******************
+********************
+********************
+********************
+*******************/
+/* COMEÇA TELA DE FOOTER */
 .game footer {
     width: 100%;
     min-height: 70px;
@@ -302,5 +316,19 @@ body {
     bottom: 0;
     left: 0;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
 }
-/* TERMINA TELA DE GAME */
+
+.game footer p {
+    margin: 10px 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    color: black;
+    text-shadow: 0 0 5px 5px red;
+}
+/* TERMINA TELA DE FOOTER */
